statred grid-template html

--- a/grid-template/index.html
+++ b/grid-template/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid 12 Example</title>
+    <title>Animated Grid Template</title>
 
     <style>
         @import url(../base.css);
+        @import url(./css/grid-template.css);
     </style>
 </head>
 <body>
-    <h1>Grid Template</h1>
-    <div class="basic-grid">
-        <div class="card">1</div>
-        <div class="card">2</div>
-        <div class="card">3</div>
-        <div class="card">4</div>
-        <div class="card">5</div>
-        <div class="card">6</div>
-        <div class="card">7</div>
-        <div class="card">8</div>
-        <div class="card">9</div>
-        <div class="card">10</div>
-        <div class="card">11</div>
-        <div class="card">12</div>
+    <h1>Animated Grid Template</h1>
+    <div class="animated-grid">
+        <div class="card">a</div>
+        <div class="card">b</div>
+        <div class="card">c</div>
+        <div class="card">d</div>
+        <div class="card">e</div>
+        <div class="card">f</div>
+        <div class="card">g</div>
+        <div class="card">h</div>
+        <div class="card">i</div>
+        <div class="card">j</div>
+        <div class="card">k</div>
+        <div class="card">l</div>
+        <div class="card">main</div>
     </div>
 </body>
 </html>
