--- a/photo-gallery/index.html
+++ b/photo-gallery/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid 12 Example</title>
+    <title>Photo Gallery Grid</title>
 
     <style>
         @import url(../base.css);
